# substance-query

./: README.md  dev.ipynb  pyproject.toml
.devcontainer/: devcontainer.json
specifications/: substance.md
substance-widget/: __init__.py  substancewidget.py
substance-widget/core/: __init__.py  analyticaldata.py  preparationprocedure.py  preparationstep.py  substance.py
substance-widget/schemes/: substance-widget_schema.md
substancewidget/: __init__.py  substancewidget.py
substancewidget/core/: __init__.py  substance.py
substancewidget/schemes/: substancewidget_schema.md
